--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,9 @@
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<!-- font awsome -->
 	<script src="https://kit.fontawesome.com/efbbea7662.js" crossorigin="anonymous"></script>
-
 	<script defer src='/build/bundle.js'></script>
+	<!-- stripe -->
+	<script src="https://js.stripe.com/v3/"></script>
 </head>
 
 <body>
